Fix columns alignment in footer

--- a/lekcja10/style.css
+++ b/lekcja10/style.css
@@ -52,11 +52,9 @@ a.broken{
 }
 .broken2{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    flex: 4 0
 }
 .broken3{
     font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
-    flex: 2 0
 }
 .foot{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
@@ -79,7 +77,9 @@ a.broken{
     background-color: darkorange;
 }
 .offer{
-    display: flex; gap: 10px
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
 }
 .text{
     display: flex; gap: 10px
